--- a/views/index.erb
+++ b/views/index.erb
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
     <title>My First View</title>
   </head>
   <body>
     <h1>Hello World</h1>
+    <p>This HTML code is inside of a '.erb' file</p>
     <p>This HTML code is inside of an .erb file in the views directory, where it belongs.</p>
   </body>
 </html>
