--- a/views/info.erb
+++ b/views/info.erb
@@ -2,11 +2,10 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
     <title>Info Page</title>
   </head>
   <body>
     <h1>Information</h1>
-    <p>Here's some information about this website.</p>
+    <p>This is the info page:</p>
   </body>
 </html>
